remove boilerplate and update docs

--- a/plugins/InstallManager/Changes
+++ b/plugins/InstallManager/Changes
@@ -1,5 +1,5 @@
 Revision history for App-BCVI-InstallManager
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+1.00    2010-??-??
+        First version, uploaded to CPAN
 
