--- a/plugins/InstallManager/README
+++ b/plugins/InstallManager/README
@@ -1,32 +1,34 @@
 App-BCVI-InstallManager
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+This module is a plugin for 'bcvi' (see: http://search.cpan.org/dist/App-BCVI).
+To use it, simply copy the InstallManager.pm file to your $HOME/.config/bcvi/
+folder.
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
+The role of this plugin is to track which remote hosts you have installed
+'bcvi' to.  Each time you run this command ...
 
+    bcvi --install HOSTNAME
 
-INSTALLATION
+the InstallManager plugin records the hostname and the MD5 checksum of the
+'bcvi' script and all its plugins.  Later when you run ...
 
-To install this module, run the following commands:
+    bcvi --update-all
 
-	perl Makefile.PL
-	make
-	make test
-	make install
+the InstallManager plugin will run --install against each host where 'bcvi'
+has been installed, but is now in need of an update.
+
 
 SUPPORT AND DOCUMENTATION
 
-After installing, you can find documentation for this module with the
-perldoc command.
+You can find documentation for this module with the perldoc command.
 
-    perldoc App::BCVI::InstallManager
+Before installation:
+
+    perldoc lib/App/BCVI/InstallManager.pm
+
+After instalation:
+
+    perldoc $HOME/.config/bcvi/InstallManager.pm
 
 You can also look for information at:
 
