--- a/lib/App/BCVI/Plugins.pod
+++ b/lib/App/BCVI/Plugins.pod
@@ -47,10 +47,10 @@ C<gedit> (the GNOME text editor) - I did warn you it was a silly example:
   use warnings;
   
   sub execute_vi {
-      my($self, $sock) = @_;
+      my($self) = @_;
 
       my $alias = $self->calling_host();
-      my @files = map { "sftp://${alias}$_" } $self->get_filenames($sock);
+      my @files = map { "sftp://${alias}$_" } $self->get_filenames();
       system('gedit', '--', @files);
   }
   
@@ -271,26 +271,30 @@ This method call requires no arguments:
 =head1 COMMAND HANDLERS
 
 When the listener receives a command it looks up the registered commands to
-locate a handler method.  The handler method will be called and passed a single
-parameter - the socket filehandle for the incoming connection.
+locate a handler method and then calls that method (with no arguments).
 
 If the handler method expects a list of filenames, it can get them by calling:
 
-  $self->get_filenames($sock)
+  $self->get_filenames()
 
 Alternatively, if the handler method expects string data rather than filenames,
 it can call:
 
-  $self->read_request_body($sock)
+  $self->read_request_body()
 
 for non-ASCII text data you may want to decode the bytes to characters using
 the L<Encode> module:
 
-  decode('utf8', $self->read_request_body($sock))
+  decode('utf8', $self->read_request_body())
 
 The handler can also access the request headers via the hashref returned by:
 
   $self->request()
+
+If for some reason the handler method needs direct read or write access to the
+client socket, it can get the socket filehandle with:
+
+  $self->sock();
 
 =head2 Response Status Codes
 
@@ -315,11 +319,11 @@ client (but most command handlers will never need to use them):
 
 You can send a response by calling:
 
-  $self->send_response($sock, $code)   # eg: $code = 900
+  $self->send_response($code)   # eg: $code = 900
 
 There is currently no way to register additional codes, but of course a handler
-routine could send any data back over the socket (using C<< $sock->write >>)
-and then exit.
+routine could make up its own status code, write it directly to the socket
+(using C<< $self->sock->write >>) and then exit.
 
 The '300' response is useful for the situation where the client sent a request
 and is expecting data in the body of the response.  If you want to see an
