--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for App-BCVI
 3.02    2010-06-??
         - allow optional arguments on 'dispatch_to' options
         - list installed plugins in --help
+        - add --plugin-help option
 
 3.01    2010-06-05
         - Fix bug where remote username was not being propagated to $BCVI_CONF
